{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 15,
  "lineage": "aec46a37-ab1f-3cc8-5ee4-800eb31c12d5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "devops-tools_firewall_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "9000",
                  "8081",
                  "8082",
                  "8083"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-04T07:20:29.992-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-tools-398511/global/firewalls/devops-tools-allow-http",
            "log_config": [],
            "name": "devops-tools-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-tools-398511/global/networks/devops-tools-vpc",
            "priority": 1000,
            "project": "devops-tools-398511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-tools-398511/global/firewalls/devops-tools-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "allow-http"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.devops-tools"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "devops-tools_firewall_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-04T07:20:30.055-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-tools-398511/global/firewalls/devops-tools-allow-ssh",
            "log_config": [],
            "name": "devops-tools-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-tools-398511/global/networks/devops-tools-vpc",
            "priority": 1000,
            "project": "devops-tools-398511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-tools-398511/global/firewalls/devops-tools-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "allow-ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.devops-tools"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "devops-tools",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devops-tools-398511/global/networks/devops-tools-vpc",
            "mtu": 0,
            "name": "devops-tools-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "devops-tools-398511",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-tools-398511/global/networks/devops-tools-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "devops-tools",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-04T07:20:32.236-07:00",
            "gateway_address": "10.101.21.1",
            "id": "projects/devops-tools-398511/regions/asia-southeast2/subnetworks/devops-tools-subnet1-asia-southeast2",
            "ip_cidr_range": "10.101.21.0/24",
            "name": "devops-tools-subnet1-asia-southeast2",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-tools-398511/global/networks/devops-tools-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-tools-398511",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "k8s-pod-range"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "k8s-service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-tools-398511/regions/asia-southeast2/subnetworks/devops-tools-subnet1-asia-southeast2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.devops-tools"
          ]
        }
      ]
    }
  ]
}